fixing pages horizontal arrangement gap issue

--- a/src-lib/v3/css/custom/texscript-core.css
+++ b/src-lib/v3/css/custom/texscript-core.css
@@ -5,7 +5,7 @@
 
 .texscript-pages {
   display: flex;
-  gap: 24px 16px;
+  gap: 24px;
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: flex-start;
@@ -18,6 +18,10 @@
   box-sizing: border-box;
   box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.5);
   flex: 0 0 auto;
+}
+
+.texscript-PageBreak {
+  display: none;
 }
 
 .texscript-Page {
